@@ -1,3 +1,11 @@
+2012-12-04  Giuseppe Scrivano  <gscrivano@gnu.org>
+
+	* metalink.c: Include "wget.h" as first file.
+
+2012-12-02  Domenico Chierico <spaghetty@gmail.com>
+
+	* Makefile.am (LDADD): Remove $(LIBS).
+
 2012-12-02  Giuseppe Scrivano  <gscrivano@gnu.org>
 
 	* http.c (gethttp): Check for pconn before access it.
